[package]
name = "mwe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.115"

[build-dependencies]
cxx-build = "1.0.115"

[profile.dev]
opt-level = 1
lto = "thin"
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
incremental = true
